[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myapputilities"
version = "0.1.1"
description = "A collection of reusable utilities."
authors = [
    { name = "Alessandro Aperio", email = "tua.email@example.com" },
]
license = "MIT"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"] # Cerca i pacchetti nella cartella 'src'


